# mogeo

./: .gitignore  .gitmodules  Makefile  README.md  Untitled-1 copy.ipynb  Untitled-1.ipynb  bool_hilite.mojo  conftest.py  environment.yml  pyproject.toml
.github/workflows/: tests.yaml
docs/: docstrings.monopic
geo_features/: __init__.mojo  coordinate_sequence.mojo
geo_features/bench/: __init__.mojo  bench_envelope.mojo
geo_features/geog/: crs.mojo  feature.mojo  feature_collection.mojo
geo_features/geom/: __init__.mojo  _utils.mojo  bounding_box.mojo  coordinate_sequence.mojo  empty.mojo  enums.mojo  envelope.mojo  geo_arrow.mojo  geometry_collection.mojo  layout.mojo  line_string.mojo  line_string.nojo  multi_line_string.mojo  multi_point.mojo  multi_point.nojo  multi_polygon.mojo  point.mojo  polygon.mojo  traits.mojo
geo_features/inter/: wkt.mojo
geo_features/notebooks/: benchmark.ipynb  mojo.geojson  points copy.ipynb  points.ipynb  python_check.ipynb  pythonobject.ipynb  shapely.ipynb  simd_scratch.ipynb  staticmethod.ipynb  tensor.ipynb
geo_features/parser/: wkt.mojo
geo_features/serialization/: __init__.mojo  geoarrow.mojo  json.mojo  wkt.mojo
geo_features/test/: helpers.mojo  main.mojo  test_coordinate_sequence.mojo  test_imports.mojo  test_point.mojo
mogeo/: __init__.mojo
mogeo/algo/: __init__.mojo
mogeo/bench/: __init__.mojo
mogeo/geog/: __init__.mojo  crs.mojo  feature_collection.mojo
mogeo/geom/: __init__.mojo  envelope.mojo  layout.mojo  point.mojo  (+3 more)
scripts/: setup-mojo-conda-env-macos.sh
test/: test_coordinate_sequence.mojo
(+36 files in other folders)
