[tool.poetry]
name = "geo_features"
version = "0.1.0"
description = "Geographic and geometric vector features (Mojo package)"
authors = ["Alex G Rice <alex@ricegeo.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
shapely = "^2.0.1"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.2"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
